--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kni-labs/rrssb"
+    "url": "https://github.com/Abdull/rrssb"
   },
   "license": "MIT",
-  "homepage": "http://rrssb.ml"
+  "homepage": "https://github.com/Abdull/rrssb"
 }
