--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kni-labs/rrssb"
+    "url": "https://github.com/Abdull/rrssb"
   },
   "license": "MIT",
-  "homepage": "http://rrssb.ml",
-  "readme": "https://github.com/kni-labs/rrssb/blob/master/README.md",
+  "homepage": "https://github.com/Abdull/rrssb",
+  "readme": "https://github.com/Abdull/rrssb/blob/master/README.md",
   "devDependencies": {
     "gulp": "*",
     "gulp-sass": "*",
